# awebpage-to-pdf

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md  N8N_INTEGRATION.md  QUICK_REFERENCE.md
scripts/: run_api.ps1  run_integration_tests.ps1  run_tests.ps1  run_unit_tests.ps1  run_worker.ps1
src/app/: config.py  database.py  models.py
src/app/api/: main.py  schemas.py
src/app/queue/: service.py
src/app/security/: url_validator.py
src/app/utils/: domain.py  logging.py
src/app/worker/: cleanup.py  main.py  render.py
tests/integration/: test_queue.py
tests/unit/: test_domain.py  test_url_validator.py
